src/test/ui/closure_context/issue-26046-fn-mut.stderr
error[E0525]: expected a closure that implements the `Fn` trait, but this closure only implements `FnMut`
  --> $DIR/issue-26046-fn-mut.rs:14:19
   |
14 |     let closure = || { //~ ERROR expected a closure that
   |                   ^^ this closure implements `FnMut`, not `Fn`
15 |         num += 1;
   |         --- closure is `FnMut` because it mutates the variable `num` here
...
18 |     Box::new(closure)
   |     ----------------- the requirement to implement `Fn` derives from here

error: aborting due to previous error

